--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
 	"main": "index.js",
 	"type": "module",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"live-server": "nodemon server.js"
 	},
 	"keywords": [],
 	"author": "Giselle Barbosa",
-	"license": "ISC"
+	"license": "ISC",
+	"dependencies": {
+		"nodemon": "^3.0.1"
+	}
 }
