--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
 	"type": "module",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"live-server": "nodemon server.js"
+		"dev": "nodemon server.js"
 	},
 	"keywords": [],
 	"author": "Giselle Barbosa",
 	"license": "ISC",
 	"dependencies": {
+		"express": "^4.18.1",
 		"nodemon": "^3.0.1"
 	}
 }
