--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"type": "module",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "nodemon server.js"
+		"dev": "nodemon server.js",
+		"lint:fix": "npx eslint ./src --fix"
 	},
 	"keywords": [],
 	"author": "Giselle Barbosa",
@@ -17,5 +18,8 @@
 		"mongodb": "^5.7.0",
 		"mongoose": "^7.3.4",
 		"nodemon": "^3.0.1"
+	},
+	"devDependencies": {
+		"eslint": "^8.56.0"
 	}
 }
